--- a/Mod3Solution/index.html
+++ b/Mod3Solution/index.html
@@ -14,7 +14,7 @@
 		<nav id="navigation-bar" class="navbar navbar-default">
 			<div class="navbar-header">
 				<div class="container-fluid">
-					<div class="navbar-brand">
+					<div class="navbar-brand pull-left">
 						<p>Food LLC.</p>					
 					</div>
 
