--- a/Mod3Solution/index.html
+++ b/Mod3Solution/index.html
@@ -12,11 +12,12 @@
 <body>
 	<header>
 		<nav id="navigation-bar" class="navbar navbar-default">
-			<div class="navbar-header">
-				<div class="container-fluid">
-					<div class="navbar-brand pull-left">
-						<p>Food LLC.</p>					
-					</div>
+			<div class="container-fluid">
+				<div class="navbar-header">
+				
+					<div class="navbar-brand">
+			            <a href="index.html"><h1>David Chu's China Bistro</h1></a>
+		          	</div>
 
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
 			            <span class="sr-only">Toggle navigation</span>
